--- a/ev_charging_project.ipynb
+++ b/ev_charging_project.ipynb
@@ -30,7 +30,7 @@
         "id": "Zv_GN4HWI6bp"
       },
       "source": [
-        "### **Title:** *Analysis of Electric Vehicle Charging Patterns for Sustainable Transportation in United States*\n",
+        "**Title:** *Analysis of Electric Vehicle Charging Patterns for Sustainable Transportation in the United States*\n",
         "\n",
         ">\n",
         ">\n",
@@ -147,7 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "LxJaFokDb4c6"
       },
@@ -162,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -186,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "m5XUtZ9mavaM"
       },
@@ -198,7 +198,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -659,7 +659,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -703,7 +703,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -734,7 +734,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "1knfiDpuLgqX"
       },
@@ -747,7 +747,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "L97j-ngqLs9B"
       },
@@ -760,7 +760,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -796,7 +796,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "7YMVW07NUC0U"
       },
@@ -809,7 +809,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -924,7 +924,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "xlGdC5GSVYHE"
       },
@@ -939,7 +939,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "hes9DhjiWUAd"
       },
@@ -953,7 +953,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1064,7 +1064,7 @@
         "id": "67W2RE9I3abb",
         "outputId": "cf398d7c-b57f-4d12-c86c-b74eabec6443"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1109,7 +1109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1172,7 +1172,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1255,7 +1255,7 @@
         "id": "65rmleNK1nIX",
         "outputId": "c52f5334-4eb7-4fe4-fbe1-353473e70989"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1325,7 +1325,7 @@
         "id": "VqAFWEW53_Uq",
         "outputId": "d6e38443-4019-4623-a5ef-1621b0a06cc7"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1372,7 +1372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "eRn907Nqv-x_",
         "colab": {
@@ -1463,6 +1463,10 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
+        "\n",
+        "* https://nibmehub.com/opac-service/pdf/read/Python%20for%20Data%20Analysis%20_%20data%20wrangling%20with%20Pandas-%20NumPy-%20and%20IPython.pdf\n",
+        "\n",
         "* https://www.kaggle.com/datasets/valakhorasani/electric-vehicle-charging-patterns/data\n",
         "\n",
         "* https://thecleverprogrammer.com/2024/03/18/electric-vehicles-market-size-analysis-using-python/\n",
@@ -1478,7 +1482,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1fnIrvh8HP0Y6H8B43vbxz6JG6-K1YT-2",
-      "authorship_tag": "ABX9TyP8BiZGN7ACfjrvCp/ZKEQH",
+      "authorship_tag": "ABX9TyPpjQQjqlaABmhZ14eilZhe",
       "include_colab_link": true
     },
     "kernelspec": {
