--- a/ev_charging_project.ipynb
+++ b/ev_charging_project.ipynb
@@ -702,6 +702,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "\n",
+        "<font color='red'>**- Please provide some explanation to help guide the readers on how to interpret the output above.**"
+      ],
+      "metadata": {
+        "id": "ie_N318xj1up"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -731,6 +743,19 @@
         "data_ev.drop(columns=[col for col in columns_to_drop if col in data_ev.columns], inplace=True)\n",
         "print(data_ev.columns)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<font color='red'>**Comments:**\n",
+        "\n",
+        "<font color='red'>**- What is your justification for removing those columns?**\n",
+        "\n",
+        "<font color='red'>**- Please provide an explanation so that readers can understand your thought process.**"
+      ],
+      "metadata": {
+        "id": "DVXa6ZoZkHVx"
+      }
     },
     {
       "cell_type": "code",
@@ -1081,7 +1106,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Insight:** The histogram of charging durations shows that most charging sessions last between 1 and 4 hours with a peak around 3 hours. This pattern indicates a preference for medium duration charging that likely influenced by users charging their vehicles during errands or work hours. The longer tail represents occasional extended charging sessions that likely by users fully recharging their batteries.\n",
+        "**Insight:** The histogram of charging durations shows that most charging sessions last between 1 and 4 hours with a <font color='red'>**peak around 3 hours.**</font> (<font color='red'>**Would a charging peak around 3 hours be correct? Why am I seeing a peak at slightly less than 2 hours instead?**</font>) This pattern indicates a preference for medium duration charging that likely influenced by users charging their vehicles during errands or work hours. The longer tail represents occasional extended charging sessions that likely by users fully recharging their batteries.\n",
         ">\n",
         "**Explanation:** This insight can guide infrastructure planning by highlighting the need for chargers designed to handle medium duration sessions efficiently. Additionally, locations catering to quick stops would benefit from the installation of more fast chargers to meet user demands effectively."
       ],
@@ -1346,7 +1371,15 @@
         "The scatter plot shows a positive correlation between energy consumed (kWh) and charging cost (USD) across all charger types. DC Fast Chargers generally appear in the higher consumption and cost ranges, reflecting their rapid charging capabilities.\n",
         ">\n",
         "**Explanation:**\n",
-        "This relationship underscores the cost implications of energy-intensive charging. It supports the need for optimized pricing models that balance affordability and revenue generation. Outliers may indicate operational inefficiencies or pricing inconsistencies that warrant further investigation."
+        "This relationship underscores the cost implications of energy-intensive charging. It supports the need for optimized pricing models that balance affordability and revenue generation. Outliers may indicate operational inefficiencies or pricing inconsistencies that warrant further investigation.\n",
+        "\n",
+        "<font color='red'>**Comments:**\n",
+        "\n",
+        "<font color='red'>**- I would suggest splitting the scatter plot above into three separate plots, one for each charger type.**\n",
+        "\n",
+        "<font color='red'>**- Presenting the scatter plots together like this makes it look cluttered and a bit confusing at first glance.**\n",
+        "\n",
+        "<font color='red'>**- If you split them into three, you can discuss the correlation (R-squared) for each charger type individually.**\n"
       ],
       "metadata": {
         "id": "-zx7Vif7Nah2"
@@ -1412,7 +1445,13 @@
         ">\n",
         ">\n",
         ">\n",
-        "**Explanation:** These correlations help prioritize factors affecting operational planning such as energy supply aligns with peak demands and charging duration trends. These relationships can results targeted improvements in pricing, capacity, and user satisfaction."
+        "**Explanation:** These correlations help prioritize factors affecting operational planning such as energy supply aligns with peak demands and charging duration trends. These relationships can results targeted improvements in pricing, capacity, and user satisfaction.\n",
+        "\n",
+        "<font color='red'>**Comments:**\n",
+        "\n",
+        "<font color='red'>**Be specific: what is the exact correlation value between Charging cost (USD) and energy consumed (kWh)?**\n",
+        "\n",
+        "<font color='red'>**You mentioned that charging duration shows a mild correlation with energy consumed. What is the exact correlation value? Please be specific.**"
       ],
       "metadata": {
         "id": "EWaZVl7LNn_y"
@@ -1481,8 +1520,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "mount_file_id": "1fnIrvh8HP0Y6H8B43vbxz6JG6-K1YT-2",
-      "authorship_tag": "ABX9TyPpjQQjqlaABmhZ14eilZhe",
       "include_colab_link": true
     },
     "kernelspec": {
